Fix z-index and add transition for navbar

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
     position: fixed;
     display: flex;
-    z-index: 1;
+    z-index: 100;
 }
 
 .header h3 {
@@ -40,6 +40,7 @@ body {
     color: white;
     text-decoration: none;
     font-weight: 600;
+    transition: all 1s;
 }
 
 .nav-item a:hover {
